Welcome to the Kaguya Changelog.

Note: Don't write "Changelog" in the actual changelog notes, this will mess up
the $Changelog command. Write "changelog" instead.

Changelog:

Version 1.32

- $warn now takes in an optional reason as a parameter. If no reason is specified with the warning,
    it will default to "No reason specified."
    - Note: The warn reason is DM'd to users.

Version 1.31.1

- Kaguya will no longer automatically disconnect as soon as a queue has finished.
- Kaguya will now successfully automatically play all songs in a playlist, instead of completely stopping after the first song in the queue.

Version 1.31

- Fixed a bug with $weekly where all critical chances were -1% from what they should have been.
- Added a lot of help commands that were missing for owner specific commands.
- Added a default configuration to the music player:
    - Default volume: 100
    - AutoDisconnect (After everyone leaves): true,
    - Self Deafen: true,
    - Kaguya will now wait 5 minutes before auto-disconnecting.
- Critical hits removed from $quickdraw
- $quickdraw winning return is now 1.90x your bet (was 1.7x)
- Some music commands will now show the thumbnail of the video/song when executing these commands.
- Added in an (experimental) $m lyrics command. It probably doesn't work with youtube videos though. Supporter only.
- $m volume has been tweaked to allow for an adjustment:
    - "$m volume -25" Will set the player's volume to 25 below what it currently is.
    - "$m volume +15" Will set the player's volume to 15 above what it just was.
    - These adjustments may not send the player's volume below zero or above 200.
- Fixed a bug with "$h wo" where the embedded message would not get sent to the chat.

Version 1.30

- $stats will now show the process's CPU usage as well as the RAM usage.
- $quickdraw has had the winning multiplier reduced to 1.75x your bet (was 1.80x)
- $quickdraw critical hit chance has been reduced:
    - Regular: 2% (was 8%)